# wind_daily

./: .gitignore  README.md  index.html  main_style.css  package.json  tailwind.config.js  vite.config.ts
css/: main_style.css  vant_css.css  wind_tail_css.css
md/: debug_way.md  introduction_cn.md  naming_rule.md
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: .env  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/db/: introduce.md  user.sqlite3
src-tauri/migrations/2023-05-30-080253_init/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs  other.rs  sqlite.rs  test.rs  twin.rs
src-tauri/src/other/: app.rs  chaos.rs  init.rs  log.rs  macros.rs  path.rs  user.rs
src-tauri/src/other/app/: app_config.rs
src-tauri/src/other/app/app_config/: active_user.rs  app_user_list.rs
src-tauri/src/other/chaos/: file_name.rs  migration.rs  struct_change_control.rs  version_migration.rs
src-tauri/src/other/chaos/migration/: file_json.rs  sql_json.rs
src-tauri/src/other/init/: init_file.rs  init_path.rs
src-tauri/src/other/path/: app_path.rs  core_path.rs  user_path.rs
src-tauri/src/other/user/: user_config.rs  user_db.rs
src-tauri/src/sqlite/: migrations.rs  schema.rs  sql_type.rs  table.rs  traits.rs
src-tauri/src/sqlite/sql_type/: date_time.rs
src-tauri/src/sqlite/table/: config.rs  example.rs  state.rs  todo.rs
src-tauri/src/sqlite/table/config/: theme.rs
src-tauri/src/sqlite/table/todo/: priority.rs
src-tauri/src/test/: env.rs
src-tauri/src/twin/: app.rs  config.rs  data.rs  debug.rs  init.rs  path.rs  user.rs
src-tauri/src/twin/app/: app_config.rs
src-tauri/src/twin/config/: app_config.rs  user_config.rs
src-tauri/src/twin/config/user_config/: meta_config.rs
src-tauri/src/twin/data/: app_data.rs  user_data.rs
src-tauri/src/twin/debug/: path_access.rs
src-tauri/src/twin/user/: user_data.rs  user_example.rs  user_todo.rs
src-tauri/test/mig_file/: A0.json
src/components/: ComGreet.vue
src/components/debug/: DebugButton.vue
src/components/task/todo/: ComListTodo.vue  ComRowTodo.vue
src/pages/: PageDebug.vue  PageMain.vue
src/pages/PageMain/: PageEntrance.vue  PageHome.vue
src/pages/PageMain/PageEntrance/: ShowEntrance.vue
src/pages/PageMain/PageHome/: PageNavigate.vue
src/pages/PageMain/PageHome/PageNavigate/: PageChart.vue  PageSetting.vue  PageShow.vue  PageTodo.vue  ShowNameless_1.vue  ShowSetting.vue
src/pages/PageMain/PageHome/PageNavigate/PageChart/: ShowChart.vue
src/pages/PageMain/PageHome/PageNavigate/PageShow/: ShowShow.vue
src/pages/PageMain/PageHome/PageNavigate/PageTodo/: ShowTodo.vue
src/router/: index.ts
src/ts_src/: icon.ts  init.ts  invoke.ts  play.ts  theme.ts  twin.ts
src/ts_src/other/: todo_sifting_machine.ts
src/ts_src/play/: play_click.ts  play_tips.ts
src/ts_src/twin/: init.ts  path.ts
src/ts_src/twin/app/: app_config.ts
src/ts_src/twin/debug/: path_access.ts
src/ts_src/twin/user/: user_example.ts  user_todo.ts
src/ts_src/type/: datetime.ts
