[package]
name = "wind_daily"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "wind_daily_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = ["api-all"] }  # 核心框架
serde = { version = "1.0", features = ["derive"] } # 序列化和反序列化
serde_json = "1.0" # json序列化和反序列化
lazy_static = "1.4" # 惰性加载静态变量
thiserror = "1.0" # 提供非常方便的宏去定义 Error
# anyhow = "1.0" 
rusqlite = { version = "0.29.0", features = ["bundled"] } # SQLite FFI,bundled:不依赖环境的SQLite,自己程序里绑定一个SQLite
diesel =  { version = "2.1.0", features = ["sqlite","r2d2","serde_json","chrono"] } # SQLite 的ORM框架
diesel_migrations = "2.1.0" # SQLite 迁移宏
r2d2 = "0.8.10" 
chrono = {version="0.4.25" } # 日期与时间
# rkyv = "0.7.42" # 0拷贝 序列化和反序列化
dotenvy = "0.15"
diesel-autoincrement-new-struct = "0.1.1" # 用宏生成没有id的Insertable结构
diesel-derive-newtype = "2.0.0" # todo 有时间仔细看看,似乎是自动实现一些 关于diesel的trail

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
